<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NDT Mobile Client (beta 4)</string>
    <string name="app_name_short">NDT-1.0b4</string>
    <string name="default_user_agent">(Linux; Android)</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="label_about_description">This software is based in part on NDT: Copyright (c) 2003 University of Chicago.</string>
    <string name="label_about_title">About NDT Mobile Client for Android</string>
    <string name="from_header">From:</string>
    <string name="to_header">To:</string>
    <string name="server_indicator">Server: %1$s</string>
    <string name="host_indicator">Host: %1$s</string>
    <string name="latitude_result">Latitude: %1$f</string>
    <string name="longitude_result">Longitude: %1$f</string>
    <string name="version_indicator">Version: %1$s</string>
    <string name="default_server_indicator">Default server: %1$s</string>
    <string name="network_type_indicator">NetworkType: %1$s</string>
    <string name="changed_server">Changed testing server to: %1$s</string>
    <string name="email_title">NDT Mobile Client for Android Result on %1$s</string>
    
    <string name="mlab">M-Lab</string>
    <string name="mlabdesc">Network Diagnostic Tool (NDT) provides a sophisticated speed and diagnostic test. An NDT test reports more than just the upload and download speeds — it also attempts to determine what, if any, problems limited these speeds, differentiating between computer configuration and network infrastructure problems. While the diagnostic messages are most useful for expert users, they can also help novice users by allowing them to provide detailed trouble reports to their network administrator.</string>
    <string name="initial_select_server">Select Server</string>
    <string name="servers_save">Save Selected Server</string>
    <string name="tests_preparing_header">PREPARING YOUR TESTS...</string>
    <string name="tests_both_header">NOW TESTING</string>
    <string name="tests_complete_header">Tests Complete</string>
    <string name="tests_upload_info">YOUR UPLOAD SPEED</string>
    <string name="tests_download_info">YOUR DOWNLOAD SPEED</string>
    <string name="tests_test_server">TEST SERVER</string>
    <string name="tests_your_computer">YOUR COMPUTER</string>
    <string name="results_header">YOUR TEST RESULTS</string>
    <string name="results_swipe_hint">Swipe to view detailed and advanced results.</string>
    <string name="results_upload_speed_header">UPLOAD SPEED</string>
    <string name="results_download_speed_header">DOWNLOAD SPEED</string>
    <string name="results_mpbs">mb/s</string>
    <string name="results_latency_label">Network latency:</string>
    <string name="results_latency">%d msec round trip time</string>
    <string name="results_jitter_label">Jitter:</string>
    <string name="results_jitter">%d msec</string>
    <string name="results_summary">Summary Results</string>
    <string name="results_detailed">Detailed Results</string>
    <string name="results_detailed_system">Your system: %1$s version %2$s \nJava version: %3$s (%4$s)</string>
	<string name="results_detailed_tcp">TCP receive window: %1$d current,\n\t%2$d maximum</string>
	<string name="results_detailed_packet_loss">%f packets lost during test</string>
	<string name="results_detailed_rtt">Round trip time: %1$d msec (minimum),\n\t%2$d msec (maximum),\n\t%3$f msec (average)</string>
	<string name="results_detailed_jitter">Jitter: %d msec</string>
	<string name="results_detailed_timeout">%1$d seconds spend waiting following a timeout\nTCP time-out counter: %2$d</string>
	<string name="results_detailed_ack">%d selective acknowledgement packets received</string>
	<string name="results_detailed_mismatch">A duplex mismatch condition was detected</string>
	<string name="results_detailed_no_mismatch">No duplex mismatch condition was detected</string>
	<string name="results_detailed_cable_fault">The test detected a cable fault</string>
	<string name="results_detailed_no_cable_fault">The test did not detect a cable fault</string>
	<string name="results_detailed_congestion">Network congestion may be limiting the connection</string>
	<string name="results_detailed_no_congestion">No network congestion was detected</string>
	<string name="results_detailed_nat">A network address translation appliance was detected</string>
	<string name="results_detailed_no_nat">No network address translation appliance was detected</string>
	<string name="results_detailed_cwndtime">%f%% of the time was not spent in a receiver limited or sender limited state</string>
	<string name="results_detailed_rcvr_limiting">%f%% of the time the connection is limited by the client machine\'s receive buffer</string>
	<string name="results_detailed_optimal_rcvr_buffer">Optimal receive buffer: %d bytes</string>
	<string name="results_detailed_bottleneck_link">Bottleneck link: %s</string>
	<string name="results_detailed_dupe_acks">%d duplicate ACKs set</string>
    <string name="results_advanced">Advanced Results</string>
    <string name="results_advanced_web100">WEB100 Kernel Variables:\n%s</string>
    <string name="results_more_about">More information about M-Lab</string>
    <string name="results_email">Email Results</string>
    <string name="results_test_again">Test Again</string>
</resources>
