<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:id="@+id/VisibleResults">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<!-- header text -->
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:paddingTop="15sp"
			android:id="@+id/ResultsHeader" android:text="@string/results_header"
			style="@style/NdtHeader" />
		<HorizontalScrollView android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="horizontal">
				<!-- summary results -->
				<LinearLayout android:orientation="vertical"
					android:layout_height="fill_parent" android:layout_width="fill_parent"
					android="@+id/SummaryResults" android:paddingLeft="35sp"
					android:paddingRight="35sp">
					<!--  upload speed -->
					<LinearLayout android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:orientation="vertical"
						android:paddingTop="5sp" android:paddingBottom="5sp"
						android:paddingLeft="25sp" android:layout_marginTop="5sp"
						android:background="@drawable/speed_box">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:paddingTop="10sp"
							android:id="@+id/UploadSpeedHeader" android:text="@string/results_upload_speed_header"
							style="@style/NdtResultsLabel" />
						<LinearLayout android:layout_width="match_parent"
							android:layout_height="match_parent" android:orientation="horizontal">
							<TextView android:layout_width="wrap_content"
								android:layout_height="wrap_content" android:id="@+id/UploadSpeed"
								android:text="0" android:layout_marginRight="5sp" style="@style/NdtResults" />
							<TextView android:layout_width="wrap_content"
								android:layout_height="wrap_content" android:id="@+id/UploadSpeedMbps"
								android:text="@string/results_mpbs" style="@style/NdtResultsMbps" />
						</LinearLayout>
					</LinearLayout>
					<!-- download speed -->
					<LinearLayout android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:orientation="vertical"
						android:paddingTop="5sp" android:paddingBottom="5sp"
						android:paddingLeft="25sp" android:layout_marginTop="10sp"
						android:background="@drawable/speed_box">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:paddingTop="10sp"
							android:id="@+id/DownloadSpeedHeader" android:text="@string/results_download_speed_header"
							style="@style/NdtResultsLabel" />
						<LinearLayout android:layout_width="match_parent"
							android:layout_height="match_parent" android:orientation="horizontal">
							<TextView android:layout_width="wrap_content"
								android:layout_height="wrap_content" android:id="@+id/DownloadSpeed"
								android:text="0" android:layout_marginRight="5sp" style="@style/NdtResults" />
							<TextView android:layout_width="wrap_content"
								android:layout_height="wrap_content" android:id="@+id/DownloadSpeedMbps"
								android:text="@string/results_mpbs" style="@style/NdtResultsMbps" />
						</LinearLayout>
					</LinearLayout>
					<!-- latency -->
					<LinearLayout android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:orientation="horizontal">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:paddingTop="15sp"
							android:id="@+id/LatencyLabel" android:text="@string/results_latency_label"
							style="@style/NdtResultsMoreLabel" />
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:paddingTop="15sp"
							android:id="@+id/Latency" style="@style/NdtResultsMoreInfo" />
					</LinearLayout>
					<!-- jitter -->
					<LinearLayout android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:orientation="horizontal">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/JitterLabel"
							android:text="@string/results_jitter_label" style="@style/NdtResultsMoreLabel" />
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/Jitter"
							style="@style/NdtResultsMoreInfo" />
					</LinearLayout>
				</LinearLayout>
				<!-- detailed results -->
				<LinearLayout android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:id="@+id/DetailedResults">
					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:paddingTop="15sp"
						android:text="Details" style="@style/NdtHeader" />
				</LinearLayout>
				<!-- advanced results -->
				<LinearLayout android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:id="@+id/AdvancedResults">
					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:paddingTop="15sp"
						android:text="Advanced" style="@style/NdtHeader" />
				</LinearLayout>
			</LinearLayout>
		</HorizontalScrollView>
		<RelativeLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<LinearLayout android:orientation="vertical"
				android:layout_alignParentLeft="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<ImageView android:id="@+id/MLabLogo"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:src="@drawable/mlab_logo_small" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:paddingTop="15sp"
					android:text="@string/results_header" style="@style/NdtHeader" />
			</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_alignParentRight="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Button android:text="@string/start" android:id="@+id/ButtonStart"
					style="@style/NdtButton" />
			</LinearLayout>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>